# openbr_assistant

./: .agent-assignee  .agent-tasks.md  .env.example  .gitignore  ANALISE_MODELO.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOP_STATUS.md  Dockerfile  Dockerfile.ultra  EXECUTION_SUMMARY.md  GITFLOW.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REPORT.md  MCP_EXPANSION_PLAN.md  OPERACAO_B_FINAL.md  OPERACAO_B_STATUS.md  PROGRESS.md  QUICKSTART.md  README_COMPLETE.md  README_SPEECH.md  SPEC.md  SPECS.md  SPECS_UI_ENHANCEMENT.md  SYNC_COMPLETE.md  TOKEN_OPTIMIZATION_SUMMARY.md  UI_REDESIGN_SPECS.md  ULTRA_README.md  ULTRA_STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  test-rotation.ts
.github/workflows/: sync-upstream.yml
containers/agent-runtime/: Dockerfile
docs/: INTELLIGENCE_SETUP.md  KEYCHAIN_TROUBLESHOOTING.md  MASTER-IMPLEMENTATION-PLAN.md  SECURITY_KICKOFF.md  SECURITY_TEAM_ASSIGNMENTS.md  SECURITY_TEAM_COORDINATION.md  SPEECH_INDEX.md  SPEECH_RECOGNITION.md  docs.json  opencode-testing.md
docs/llama/: quickstart.md
docs/providers/: developer-guide.md  index.md  user-guide.md
docs/specs/: README.md  SPEC-001-model-management.md  SPEC-002-credential-encryption.md  SPEC-003-security-vulnerabilities.md  chat-ux-improvements-spec-driven.md  generic-model-provider-config-spec-driven.md  generic-model-provider-config.md  spec-a1-news.md  spec-a2-security.md  spec-a3-containers.md  spec-b1-features-dashboard.md  spec-c1-model-routing.md  spec-c2-ollama.md  spec-c3-ralph.md  spec-containers-crud.md  spec-d1-memory.md  spec-e1-rate-limits.md  spec-e2-budget.md  (+8 more)
native/: binding.gyp  buffer-ops.cc  main.cc  simd-ops.cc
openclaw-go/: go.mod
openclaw-rs/: Cargo.toml
openclaw-rs/src/: cache.rs  crypto.rs  image.rs  json.rs  lib.rs
rust/: Cargo.toml  build.rs
rust/src/: cache.rs  compression.rs  crypto.rs  json.rs  lib.rs  media.rs
scripts/: assign-agent.sh  benchmark.mjs  build-all.sh  build-ultra.mjs  check-all-status.sh  coordinator.sh  demo-cache.mjs  dev-hot-reload.sh  keychain-diagnose.ts  parallel-integration.sh  setup-security.ts  setup-worktrees.sh  start-gateway-skip-check.mjs  test-integration.mjs  test-rust.mjs  ui-dev.sh  ui-watch-build.sh
specs/: config-ui-improvements-spec.md
src/: rust-integration.ts  ultra-auto.ts  ultra.ts
ui/: index.html  package.json  vite.config.ts
(+449 files in other folders)
